[tool.poetry]
name = "delta-lake-reader"
version = "0.2.2"
description = "Lightweight wrapper for reading Delta tables without Spark"
authors = ["Jeppe Johan Waarkjær Olsen <jeppe742@gmail.com>"]
packages= [{include="deltalake"}]
readme = "README.md"
repository = "https://github.com/jeppe742/DeltaLakeReader"

[tool.poetry.dependencies]
python = "^3.7"
pyarrow = "^2.0.0"
fsspec = "^0.8.5"
pip = "^20.3.3"
adlfs = {version = "^0.5.9", optional = true}
aiohttp = {version = "^3.7.3", optional = true}
s3fs = {version = "^0.5.2", optional = true}
gcsfs = {version = "^0.7.1", optional = true}
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
black = "^20.8b1"
tox = "^3.20.1"
pyspark = "^3.0.1"
pandas = "^1.1.5"
ipython = "^7.1.0"

[tool.poetry.extras]
azure = ["adlfs","aiohttp"]
aws = ["s3fs"]
gcp = ["gcsfs"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
